--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,12 @@
     "url": "https://github.com/Mumbere7/quickCredit/issues"
   },
   "homepage": "https://github.com/Mumbere7/quickCredit#readme",
-  "dependencies": {},
+  "dependencies": {
+    "bcrypt": "^3.0.6",
+    "express": "^4.16.4",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
@@ -27,6 +32,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-watch": "^7.0.0",
+    "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
