--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,9 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel server.js --out-dir build",
+    "dev-start": "babel-watch server.js"
   },
   "repository": {
     "type": "git",
@@ -21,9 +23,12 @@
   "homepage": "https://github.com/Mumbere7/quickCredit#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
     "express": "^4.16.4",
     "joi": "^14.3.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "uui": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -31,6 +36,7 @@
     "@babel/register": "^7.4.4",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "babel-watch": "^7.0.0",
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
