--- a/api/package.json
+++ b/api/package.json
@@ -28,7 +28,8 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "uui": "^1.0.7"
+    "uui": "^1.0.7",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
