--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "",
     "build": "babel server.js --out-dir build",
     "dev-start": "babel-watch server.js",
     "start": "node_modules/.bin/nodemon server.js --exec babel-node --"
