--- a/api/.eslintrc.yml
+++ b/api/.eslintrc.yml
@@ -16,3 +16,4 @@ rules:
   no-trailing-spaces: 0
   eol-last: 0
   no-unused-vars: 0
+  import/no-extraneous-dependencies: [2, { devDependencies: true }]
