--- a/api/.travis.yml
+++ b/api/.travis.yml
@@ -1,3 +1,12 @@
 language: node_js
 node_js:
-  - "8"
+  - "stable"
+
+env:
+
+script:
+  - npm test
+after_success:
+  - npm run coverage
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
