--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha ./tests/*.js --require esm",
-    "build": "babel server.js --out-dir build",
+    "build": "npm run create && npm run clean && npm run compile && npm run copy",
     "dev-start": "babel-watch server.js",
     "start": "nodemon --exec babel-node server.js"
   },
@@ -25,6 +25,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "coveralls": "^3.0.3",
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
