--- a/api/.travis.yml
+++ b/api/.travis.yml
@@ -1,12 +1,5 @@
 language: node_js
 node_js:
-  - "stable"
-
-env:
-
-script:
-  - npm test
-after_success:
-  - npm run coverage
-after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - "8.10.0"
+notifications:
+  email: false
