--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "mocha ./api/tests/*.js --require esm",
     "transpile": "babel server --out-dir dist",
-    "build": "babel api --out-dir dist",
+    "build": "babel api --out-dir build",
     "dev-start": "babel-watch ./api/server.js",
     "start": "nodemon --exec babel-node ./api/server.js"
   },
@@ -31,6 +31,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
+    "swagger-jsdoc": "^1.3.0",
     "swagger-ui": "^3.22.1",
     "swagger-ui-express": "^4.0.2",
     "travis-ci": "^2.2.0",
