--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.19.0",
     "coveralls": "^3.0.3",
     "express": "^4.16.4",
+    "jade": "^1.11.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
