--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha ./api/tests/*.js --require esm",
+    "test": "mocha ./api/tests/*.js --exit --require esm",
     "transpile": "babel server --out-dir dist",
     "build": "babel api --out-dir build",
     "dev-start": "babel-watch ./api/server.js",
